<resources>
    <string name="app_name">Youth</string>
    <string name="company_name">Cleverness Production</string>
    <string name="start_up">Perusahaan Software</string>
    <string name="about_us_desc">10k orang menyukai ini \n4.5 of 5 Bintang. 500 ulasan \nBuka 08.30AM - 06.00PM</string>
    <string name="about">MENUJU PROFILE - TENTANG INI</string>
    <string name="call">Hubungi Kami</string>
    <string name="see">Lihat Kami</string>
    <string name="location">Kunjungi Kami</string>
    <string name="location_desc">291 30th St. \nSan Fransisco, Cisauk 15811 \nIndonesia</string>
    <string name="call_number">(+62) 89654530259</string>
    <string name="insta_id">"@clevernessproduction00</string>

    <string name="title_success">Sukses</string>
    <string name="warning">Peringatan</string>
    <string name="ok">Oke</string>
    <string name="cancel">Batal</string>
    <string name="confirmation">Konfirmasi</string>
    <string name="next">Lanjut</string>
    <string name="done">Selesai</string>
    <string name="register">Registrasi</string>
    <string name="login">Login</string>

    <!--Quis-->
    <string name="level1">Level 1</string>
    <string name="level1_desc">Latihan untuk pemula</string>
    <string name="level2">Level 2</string>
    <string name="level2_desc">Mulai mengasah kemampuanmu</string>
    <string name="level3">Level3</string>
    <string name="level3_desc">Inilah saatnya masuk ke tahap menengah!</string>
    <string name="level4">Level 4</string>
    <string name="level4_desc">Tahap ini akan lebih sulit dari sebelumnya.</string>
    <string name="level5">Level 5</string>
    <string name="level5_desc">Bersiaplah untuk kesulitan yang tiada batas!</string>

    <string name="math_statistic">Statistika</string>

    <!--MathStatistikaHafalan-->
    <string name="math_mean">Menentukan Mean</string>
    <string name="math_mean_desc">Rata - rata Data Tunggal, Rata rata Data Berkelompok</string>
    <string name="math_median">Menentukan Median/Nilai Tengah</string>
    <string name="math_median_desc">Median Data Tunggal, Median Data Berkelompok</string>
    <string name="math_modus">Menentukan Modus/Data Terbanyak</string>
    <string name="math_modus_desc">Modus Data Tunggal, Modus Data Berkelompok</string>

    <!--Eksponen-->
    <string name="math_eksponen">Sifat Pangkat Positif</string>
    <string name="math_eksponen_desc">Pangkat yang bernilai positif, beserta contohnya</string>
    <string name="math_eksponen_nol">Sifat Pangkat Nol</string>
    <string name="math_eksponen_nol_desc">Pangkat yang bernilai nol, beserta contohnya</string>
    <string name="math_eksponen_negatif">Sifat Pangkat Negatif</string>
    <string name="math_eksponen_negatif_desc">Pangkat yang bernilai negatif, beserta contohnya</string>

    <!--InggrisExpression-->
    <string name="english_expression_positive">Positive Expression</string>
    <string name="english_expression_positive_desc">Bagaimana cara kita menyampaikan reaksi positif</string>
    <string name="english_expression_negative">Negative Expression</string>
    <string name="english_expression_negative_desc">Bagaimana cara kita menyampaikan reaksi negatif</string>

    <!--Fragment Hafalan-->
    <string name="math">Matematika</string>
    <string name="math_desc">Matriks, Eksponen, Baris dan Deret</string>
    <string name="english">Bahasa Inggris</string>
    <string name="english_desc">Expressions, Grammars, Texts</string>
    <string name="indonesian">Bahasa Indonesia</string>
    <string name="indonesian_desc">Cerpen, Ide Pokok, Kesimpulan Paragraf</string>

    <!--Talking Avatar-->
    <string name="talking_avatar">Halo,\nNamaku Jono, Aku yang akan menemanimu untuk bermain di dalam aplikasi ini.</string>
    <string name="talking_avatar2">Selamat bermain, jangan dibuat stress ya karena game ini hanya untuk have fun dan mengasah otakmu.</string>
    <string name="talking_hafalan">Kamu bisa pilih hafalan yang ada, \njangan takut untuk belajar ya!</string>
    <string name="talking_quis">Ayo! \nAsah kemampuanmu yang telah kamu asah lewat hafalan!</string>
    <string name="failure">Hmm, \nKamu harus tetap banyak belajar yaa!</string>
    <string name="success">Yeay! \nKamu berhasil menyelesaikan quisnya, lanjutkan kerja kerasmu!</string>
    <string name="talking_statistika">Materi ini bisa dibilang menyenangkan untuk dipelajari karena untuk memahaminya kita diharuskan untuk memutar otak dan menggunakan logika.</string>
    <string name="talking_statistika2">Jadi, \nSemangat ya dalam belajarnya hehe</string>
    <string name="talking_eksponen">Eksponen atau pangkat artinya perkalian berulang dengan bilangan yang sama.</string>
    <string name="talking_eksponen2">Tentunya ini akan menjadi menyenangkan ya saat kita mempelajarinya.</string>
    <string name="talking_expression">Materi ini akan menjadi keseruan sendiri bagi pengguna, karena disini kita akan belajar bagaimana cara untuk menyampaikan ekspresi kita.</string>


    <!--Field-->
    <string name="username">Nama Lengkap</string>
    <string name="password">Kata Sandi</string>
    <string name="password_confirm">Konfirmasi Kata Sandi</string>
    <string name="email">Email</string>
    <string name="term_and_condition">Syarat dan Ketentuan</string>
    <string name="fill_term_and_conditions">Dengan ini saya menyetujui bahwa aplikasi ini akan membuat saya menjadi baik dan segala hal keburukan mau kebaikan yang saya lakukan bukan dari aplikasi ini melainkan dari diri saya sendiri. Aplikasi ini mengasah kemampuan yang sudah saya miliki di dalam bidang akademik dan mengembangkannya menjadi lebih baik. Saya percaya bahwa aplikasi ini mampu membuat orang menjadi bertambah ilmu dan selalu ingin belajar. Terima Kasih</string>
    <string name="reg_success2">Untuk sekarang, Anda bisa melakukan Login</string>

    <string name="login_desc">Isi Email dan password \nyang sudah Anda daftarkan</string>
    <string name="login_desc2">*Password harus terdiri dari 8 digit dan \nmengandung huruf capital dan angka</string>


    <string name="error_message_name">Masukkan Nama Lengkap</string>
    <string name="error_message_email">Masukkan Email yang Valid</string>
    <string name="error_message_age">Masukkan Umur</string>
    <string name="error_message_password">Masukkan Password</string>
    <string name="success_message">Registrasi Sukses</string>
    <string name="text_not_member">Belum mempunyai akun? Ayo Buat!</string>
    <string name="text_already_member">Sudah menjadi member? Login</string>
    <string name="error_email_exists">Email sudah terdaftar</string>
    <string name="error_password_match">Password tidak sama</string>
    <string name="error_valid_email_password">Email dan Password salah</string>

    <!--Welcome-->
    <string name="good_recitation">Hafalan yang Baik</string>
    <string name="good_recitation_desc">Bagaimana cara Anda tidak hanya menghafal tetapi juga memahami dan menuntaskan persoalan</string>
    <string name="amazing_quiz">Quis Kehebatan</string>
    <string name="amazing_quiz_recitation">Kita menciptakan untuk mempermudah dan juga untuk meningkatkan pengetahuan Anda dimanapun Anda berada</string>
    <string name="enjoy">Nikmati Aplikasi Anda</string>
    <string name="enjoy_desc">Nikmati saja, lihat dan mainkan apa yang harus Anda mainkan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Fragment-->
    <string name="dashboard">Dashboard</string>
    <string name="recitation">Hafalan</string>
    <string name="quiz">Quis</string>
    <string name="poin">Poin</string>
    <string name="about_us">Tentang Kami</string>
    <string name="logout">Logout</string>

    <!--Mean-->
    <string name="keterangan">Keterangan :</string>
    <string name="mean_soal">Nilai mean (rata - rata) dari data pada tabel tersebut adalah ...</string>
    <string name="mean_pernyataan">Nilai tengah masing - masing kelas adalah sebagai berikut.</string>
    <string name="rata">= Rataan hitung dari data kelompok</string>
    <string name="frekuensi">= Frekuensi kelas ke-i</string>
    <string name="nilai_tengah">= Nilai tengah kelas ke-i</string>
    <string name="contoh_soal">Contoh Soal</string>
    <string name="pembahasan">Pembahasan</string>

    <!--Inggris-->
    <string name="hafalan_positive">Positive Expression biasanya dilakukan pada tindakan yang mengacu puji - pujian terhadap orang, hewan, maupun benda.</string>
    <string name="hafalan_negative">Negative Expression biasanya digunakan pada tindakan yang mengacu kepada duka, sedih, dll.</string>
    <!--Dialog-->
    <string name="dialog_logout">Apakah Anda ingin logout?</string>

    <string name="desc_activation">Silahkan isi indentitas Anda \npada kolom di bawah ini</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
