<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_container"
    android:background="@drawable/form_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">

    <include layout="@layout/app_bar_menu"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/expression_logo"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.android.youth.component.CustomListHafalan
                android:id="@+id/btnPositive"
                style="@style/styleMenuButton"
                app:subtitle_hafalan="@string/english_expression_positive_desc"
                app:title_hafalan="@string/english_expression_positive" />

            <com.android.youth.component.CustomListHafalan
                android:id="@+id/btnNegative"
                style="@style/styleMenuButton"
                android:layout_marginTop="-2dp"
                app:subtitle_hafalan="@string/english_expression_negative_desc"
                app:title_hafalan="@string/english_expression_negative" />

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="5dp">

        <ImageView
            android:id="@+id/imgTalk1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:src="@mipmap/avatar" />

        <ImageView
            android:id="@+id/imgTalk2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:visibility="gone"
            android:src="@mipmap/avatar3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_card"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/talk1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/talking_expression" />

            <TextView
                android:id="@+id/talk2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:text="@string/talking_statistika2" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>