<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/form_background"
    android:orientation="vertical"
    android:fillViewport="true"
    android:scrollbars="none">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.android.youth.component.CustomListFragment
                android:id="@+id/level1"
                style="@style/styleMenuButton"
                app:description_menu="@string/level1_desc"
                app:icon_menu="@mipmap/training1"
                app:title_menu="@string/level1" />

            <com.android.youth.component.CustomListFragment
                android:id="@+id/level2"
                style="@style/styleMenuButton"
                android:layout_marginTop="-2dp"
                app:description_menu="@string/level2_desc"
                app:icon_menu="@mipmap/training"
                app:title_menu="@string/level2" />

            <!--<com.android.youth.component.CustomListFragment-->
                <!--android:id="@+id/level3"-->
                <!--style="@style/styleMenuButton"-->
                <!--android:layout_marginTop="-2dp"-->
                <!--android:visibility="visible"-->
                <!--app:description_menu="@string/level3_desc"-->
                <!--app:icon_menu="@mipmap/arm"-->
                <!--app:title_menu="@string/level3" />-->

            <!--<com.android.youth.component.CustomListFragment-->
                <!--android:id="@+id/level4"-->
                <!--style="@style/styleMenuButton"-->
                <!--app:description_menu="@string/level4_desc"-->
                <!--app:icon_menu="@mipmap/dumbell"-->
                <!--app:title_menu="@string/level4" />-->

            <!--<com.android.youth.component.CustomListFragment-->
                <!--android:id="@+id/level5"-->
                <!--style="@style/styleMenuButton"-->
                <!--android:layout_marginTop="-2dp"-->
                <!--app:description_menu="@string/level5_desc"-->
                <!--app:icon_menu="@mipmap/strong"-->
                <!--app:title_menu="@string/level5" />-->

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:paddingTop="5dp">


        <ImageView
            android:id="@+id/imgTalk2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:src="@mipmap/avatar2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_card"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/talk1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/talking_quis" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>